Migrate to Java 17, fix CVE vulnerabilities, replace Bower with Maven WebJars
- Upgrade Java 11 -> 17 with API compatibility fixes
- Fix CRITICAL/HIGH CVEs: PostgreSQL SQL injection (CVE-2024-1597),
  jQuery XSS (CVE-2020-11022/11023), blueimp RCE (CVE-2018-9206),
  Guava DoS (CVE-2018-10237), Gson DoS (CVE-2022-25647), and others
- Update server deps: Tomcat 9.0.98, PostgreSQL 42.7.4, Guava 33.3.1,
  httpclient 4.5.14, commons-fileupload 1.5, Tika 2.9.2
- Migrate simple-xml to Jackson XML (XmlMapper)
- Replace log4j with reload4j 1.2.25
- Migrate frontend deps from Bower/Gulp to Maven WebJars
- Update frontend: jQuery 3.7.1, highlight.js 11.11.1, Chart.js 2.9.4,
  Moment.js 2.30.1, Vue 2.7.8, blueimp-file-upload 10.32.0
- Add Maven Wrapper (mvnw) for build portability
- Remove Bower/Gulp build files (bower.json, package.json, gulpfile.js)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>